--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.page-footer--directions{
+  margin-top: -86px;
+}
+
 .page-footer__container{
   @media (min-width: $medium-width){
     display: flex;
