--- a/source/sass/blocks/country-description-list.scss
+++ b/source/sass/blocks/country-description-list.scss
@@ -15,7 +15,7 @@
 .country-description-list__item{
   position: relative;
   &:not(:last-child){
-    margin-bottom: 10px
+    margin-bottom: 16px
   }
 
   @media (min-width: $large-width) {
@@ -33,6 +33,18 @@
     font-size: 30px;
     line-height: 30px;
   }
+  &:after {
+    position: absolute;
+    right: 36px;
+    height: 15px;
+    width: 100%;
+    content: "";
+    background: linear-gradient(to left,
+       rgba(255,255,255, 1) 5%,
+       rgba(255,255,255, 0) 30%
+    );
+    pointer-events: none;
+  }
 }
 
 .country-description-list__country{
@@ -41,16 +53,18 @@
   justify-content: space-between;
 
   margin-bottom: 18px;
+  margin-left: 11px;
 }
 
 .country-description-list__change-text{
   border: 1px solid $special-dark-grey;
   border-radius: 4px;
-  padding-top: 11px;
-  padding-left: 14px;
+  margin-top: -8px;
+  padding-top: 9px;
+  padding-left: 12px;
   @include text(16px, normal, 22px, $special-grey);
-  width: 100%;
-  height: 220px;
+  width: 93%;
+  height: 208px;
 
   @media (min-width: $medium-width) {
     padding-top: 18px;
@@ -143,6 +157,7 @@
 .country-description-list__flag{
   width: 35px;
   height: 24px;
+  margin-top: 2px;
 
   @media (min-width: $medium-width) {
     width: 70px;
