--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -33,7 +33,7 @@
 }
 
 .page-header--height{
-  height: 150px;
+  height: 131px;
 
   @media (min-width: $medium-width) {
     height: 350px;
@@ -148,6 +148,7 @@
 .page-header__caption{
   @include text(36px, bold, 36px, #ffffff);
   margin: 0;
+  margin-top: 92px;
   padding-left: 25px;
   padding-bottom: 12px;
   display: flex;
@@ -168,6 +169,7 @@
 }
 
 .page-header__caption--without-js{
+  margin-top: 0;
   @media (max-width: $medium-max-width) {
     color: $basic-blue;
   }
@@ -242,7 +244,7 @@
 }
 
 .page-header__underline--directions{
-  width: 220px;
+  width: 215px;
 
   @media (min-width: $medium-width) {
     left: 74px;
