--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -266,6 +266,8 @@
 }
 
 .profile__tariffs-text{
+  @include text(16px, bold, 16px, #132576);
+
   @media (min-width: $medium-width) {
     font-size: 20px;
     line-height: 20px;
