--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -33,6 +33,9 @@
 }
 
 .select__item-country--text-opened{
+  margin-left: 7px;
+  margin-top: 2px;
+  letter-spacing: 0.02em;
   color: #ffffff;
 }
 
