--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -6,10 +6,14 @@
 .step-list__container{
   display: flex;
   flex-direction: column;
-  padding-top: 24px;
+  padding-top: 22px;
   padding-bottom: 23px;
   padding-left: 25px;
   padding-right: 25px;
+
+  &:not(:first-child){
+    padding-bottom: 14px;
+  }
 
   @media (min-width: $medium-width) {
     padding-top: 48px;
@@ -103,7 +107,9 @@
 
 .step-list__description{
   margin-top: 16px;
+  min-width: 230px;
   min-height: 90px;
+  margin-left: -1px;
   @include text(16px, normal, 22px, $special-grey);
 
 
@@ -160,10 +166,15 @@
 .step-list__nav-buttons{
   display: flex;
   flex-direction: column;
+  margin-top: 4px;
 
   @media (min-width: $medium-width) {
     flex-direction: row;
     justify-content: space-between;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 47px;
   }
 }
 
@@ -182,7 +193,7 @@
 }
 
 .step-list__trip-data{
-  margin-top: 20px;
+  margin-top: 18px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -201,6 +212,7 @@
 }
 
 .step-list__trip-data--companions{
+  margin-top: 21px;
   @media (min-width: $medium-width) {
     order: 3;
     padding-top: 26px;
@@ -363,7 +375,7 @@
 
 .step-list__input{
   position: relative;
-  margin-top: 8px;
+  margin-top: 10px;
 
   @media (min-width: $medium-width) {
     margin-top: 24px;
@@ -406,9 +418,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 12px;
+  padding-top: 8px;
   padding-bottom: 12px;
-  margin-top: 25px;
+  margin-top: 20px;
   text-align: center;
   border-top: 1px solid #D6D9E6;
   border-bottom: 1px solid #D6D9E6;
@@ -431,27 +443,10 @@
   }
 }
 
-.step-list__back{
-  width: 14px;
+.step-list__arrow{
+  width: 15px;
   height: 21px;
-
-  @media (min-width: $medium-width) {
-    width: 30px;
-    height: 36px;
-  }
-
-  &:hover{
-    opacity: 0.5;
-  }
-
-  &:active, &:focus{
-    opacity: 0.1;
-  }
-}
-
-.step-list__next{
-  width: 14px;
-  height: 21px;
+  opacity: 0.3;
 
   @media (min-width: $medium-width) {
     width: 30px;
@@ -468,6 +463,6 @@
 }
 
 .step-list__days{
-  margin-top: 22px;
+  margin-top: 20px;
   width: 100%;
 }
