--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -36,7 +36,7 @@
   height: 131px;
 
   @media (min-width: $medium-width) {
-    height: 350px;
+    height: 338px;
   }
 }
 
@@ -158,6 +158,7 @@
   @media (min-width: $medium-width) {
     font-size: 60px;
     line-height: 60px;
+    margin-top: 221px;
     padding-left: 75px;
     padding-bottom: 66px;
   }
