--- a/source/sass/blocks/add-plans.scss
+++ b/source/sass/blocks/add-plans.scss
@@ -25,7 +25,7 @@
   padding-top: 15px;
 
   @media (min-width: $medium-width) {
-    padding-top: 56px;
+    padding-top: 42px;
   }
 }
 
@@ -47,11 +47,12 @@
     max-width: 50%;
     height: 80px;
     min-width: 286px;
-    margin-top: 47px;
+    margin-top: 49px;
   }
 
   @media (min-width: $large-width) {
     margin-top: 57px;
+    max-width: 29%;
   }
 }
 
@@ -70,13 +71,20 @@
 
   @media (min-width: $medium-width) {
     justify-content: flex-end;
-    padding-right: 41px;
+    margin-left: -36px;
+    margin-top: 84px;
   }
 }
 
 .add-plans__button-caption{
   font-size: 17px;
   line-height: 30px;
+
+  @media (min-width: $medium-width) {
+    font-size: 24px;
+    line-height: 24px;
+    margin-left: 19px;
+  }
 }
 
 .add-plans__caption{
@@ -95,6 +103,7 @@
     display: block;
     width: 14px;
     height: 14px;
+    margin-right: 24px;
   }
 }
 
@@ -123,13 +132,13 @@
 
   @media (min-width: $medium-width) {
     margin-top: 13px;
-    width: 65%;
+    width: 69%;
     height: 70px;
   }
 
   @media (min-width: $large-width) {
     margin-top: 13px;
-     width: 63%;
+     width: 73%;
   }
 
   &:hover{
@@ -167,8 +176,8 @@
   display: none;
   @media (min-width: $medium-width) {
     display: block;
-    top: 27px;
-    right: 5px;
+    top: 42px;
+    right: 0px;
     stroke: $basic-blue-light;
     stroke-width: 2;
     width: 14px;
@@ -177,8 +186,8 @@
 
   @media (min-width: $large-width) {
     top: 90px;
-    right: 20%;
-    height: 250px;
+    right: 216px;
+    height: 277px;
   }
 }
 
@@ -206,8 +215,12 @@
 .add-plans__empty-country{
   @include selected-country;
   @media (min-width: $medium-width) {
-    width: 60%;
+    width: 64%;
     height: 46px;
+  }
+
+  @media (min-width: $large-width) {
+    width: 70%;
   }
 }
 
@@ -246,6 +259,14 @@
 .add-plans__show-countries-icon--closed{
   fill:black;
   opacity: 0.3;
+
+  @media (min-width: $medium-width) {
+    margin-right: 10px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-right: 4px;
+  }
 }
 
 .add-plans__remove-country-icon{
@@ -261,10 +282,8 @@
 
   @media (min-width: $medium-width) {
     fill: transparent;
-    transform: scale(1.5);
-    width: 24px;
-    height: 22px;
-    right: -15px;
+    transform: scale(2.2);
+    right: 0;
     top: 23px;
     --circle-fill: none;
   }
@@ -286,12 +305,12 @@
   right: -11px;
 
   @media (min-width: $medium-width) {
-    right: -65px;
-    top: 23px;
+    top: 20px;
+    right: -35px;
   }
 
   @media (min-width: $large-width) {
-    right: -200px;
+    right: -100px;
   }
 }
 
@@ -311,9 +330,14 @@
   }
 
   @media (min-width: $medium-width) {
+    margin-top: 1px;
+    margin-left: 15px;
     font-size: 20px;
     line-height: 20px;
-    letter-spacing: 0.09em;
+  }
+
+  @media (min-width: $large-width) {
+    letter-spacing: normal;
   }
 }
 
@@ -326,14 +350,14 @@
   height: 8px;
 
   @media (min-width: $medium-width) {
-    right: 157px;
-    top: 30px;
+    top: 25px;
+    right: 132px;
     width: 14px;
     height: 14px;
   }
 
   @media (min-width: $large-width) {
-    right: 323px;
+    right: 215px;
   }
 }
 
@@ -347,13 +371,13 @@
 
   @media (min-width: $medium-width) {
     position: absolute;
-    right: 157px;
-    top: 43px;
+    top: 39px;
+    right: 133px;
     fill: #EDEFF6;
   }
 
   @media (min-width: $large-width) {
-    right: 323px;
+    right: 215px;
   }
 }
 
@@ -364,12 +388,12 @@
   fill: $basic-blue-light;
 
   @media (min-width: $medium-width) {
-    top: 30px;
-    right: 107px;
+    top: 23px;
+    right: 99px;
   }
 
   @media (min-width: $large-width) {
-    right: 118px;
+    right: 112px;
   }
 }
 
@@ -389,6 +413,7 @@
   @media (min-width: $medium-width) {
     width: 22px;
     height: 21px;
+    margin-right: 7px;
   }
 
   @media (min-width: $large-width) {
@@ -409,15 +434,19 @@
   position: absolute;
   z-index: 1;
   background: #FFFFFF;
-  width: 100%;
+  left: 0;
+  right: 0;
 
   @media (min-width: $medium-width) {
     display: flex;
+    height: 414px;
+    right: -40px;
     box-shadow: -1px 1px 10px 1px #aaaaaa;
   }
 
   @media (min-width: $large-width) {
     width: auto;
+    height: 476px;
   }
 }
 
@@ -425,13 +454,17 @@
   width: 100%;
 
   @media (min-width: $medium-width) {
-    margin-top: 35px;
-    margin-right: 80px;
+    margin-top: 33px;
+    margin-right: 78px;
     margin-bottom: 33px;
     margin-left: 27px;
   }
 
   @media (min-width: $large-width) {
+    margin-top: 20px;
+    margin-right: 86px;
+    margin-bottom: 0;
+    margin-left: 9px;
     border-collapse: separate;
     border-spacing: 16px 14px;
   }
@@ -444,6 +477,19 @@
   padding-bottom: 15px;
   padding-left: 18px;
   letter-spacing: 0.02em;
+
+  @media (min-width: $medium-width) {
+    border: none;
+    border-left: 1px solid $special-dark-grey;
+    margin-right: 50px;
+    padding-top: 30px;
+    padding-left: 25px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-left: 25px;
+    margin-right: 79px;
+  }
 }
 
 .add-plans__country-item{
@@ -453,7 +499,7 @@
 
   @media (min-width: $medium-width) {
     &:not(:last-child){
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
   }
 }
@@ -482,7 +528,11 @@
   min-width: 140px;
 
   @media (min-width: $medium-width) {
-    width: 60%;
+    width: 64%;
+  }
+
+  @media (min-width: $large-width) {
+    width: 70%;
   }
 }
 
@@ -494,13 +544,13 @@
 
   @media (min-width: $medium-width) {
     position: absolute;
-    right: 50px;
+    top: 3px;
+    right: 34px;
     border: none;
-    margin-left: 52px;
   }
 
   @media (min-width: $large-width) {
-    right: 205px;
+    right: 103px;
   }
 }
 
@@ -541,4 +591,25 @@
 
 .add-plans__send{
   margin-top: 14px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 50px;
+    margin-left: 2px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 58px;
+  }
+}
+
+.add-plans__description{
+  @media (min-width: $medium-width) {
+    max-width: 440px;
+    margin-top: 35px;
+    margin-left: 3px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-left: -1px;
+  }
 }
