--- a/source/sass/blocks/calendar.scss
+++ b/source/sass/blocks/calendar.scss
@@ -15,7 +15,7 @@
 
   @media (min-width: $large-width) {
     width: 148px;
-    height: 60px;
+    height: 71px;
   }
 }
 
@@ -23,6 +23,11 @@
   padding-left: 5px;
   padding-bottom: 8px;
   border-bottom: 1px solid rgba(214,217,230, 0.3);
+
+  @media (min-width: $large-width) {
+    padding-left: 18px;
+    padding-bottom: 20px;
+  }
   &:hover{
     border-bottom: 2px solid #FF5C23;
   }
@@ -100,5 +105,11 @@
   @media (min-width: $large-width) {
     display: block;
     line-height: 20px;
+  }
+}
+
+.calendar__weekend-latter{
+  @media (max-width: $small-max-width) {
+    display: none;
   }
 }
