--- a/source/sass/blocks/details-list.scss
+++ b/source/sass/blocks/details-list.scss
@@ -13,11 +13,16 @@
     font-size: 20px;
     line-height: 20px;
     letter-spacing: 0.1em;
+    margin-top: -5px;
   }
 }
 
 .details-list__details{
   margin-inline-start: 5px;
+
+  @media (min-width: $medium-width) {
+    margin-inline-start: 7px;
+  }
 }
 
 .details-list__date-details{
@@ -45,6 +50,7 @@
 
   @media (min-width: $medium-width) {
     min-width: 100px;
+    margin-right: -16px;
     &:after{
       width: 20px;
       border-bottom: solid 2px $basic-blue-light;
