--- a/source/sass/blocks/select-input-list.scss
+++ b/source/sass/blocks/select-input-list.scss
@@ -9,4 +9,19 @@
   &:not(:last-child){
     margin-bottom: 26px;
   }
+
+  @media (min-width: $medium-width) {
+    margin-top: 0;
+    margin-left: 3px;
+
+    &:not(:last-child){
+      margin-bottom: 18px;
+    }
+  }
+
+  @media (min-width: $large-width) {
+    &:not(:last-child){
+      margin-bottom: 17px;
+    }
+  }
 }
