--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -13,6 +13,7 @@
   overflow: hidden;
 
   @media (min-width: $medium-width) {
+    margin-left: 15px;
     font-size: 20px;
     line-height: 20px;
     letter-spacing: 0.1em;
@@ -33,10 +34,16 @@
 }
 
 .select__item-country--text-opened{
-  margin-left: 7px;
+  margin-left: 8px;
   margin-top: 2px;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.01em;
   color: #ffffff;
+
+  @media (min-width: $medium-width) {
+    margin-left: 15px;
+    margin-top: -1px;
+    letter-spacing: 0.1em
+  }
 }
 
 .select__item-country--text-opened.select__item:after{
