--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -16,17 +16,25 @@
   }
 
   @media (min-width: $medium-width) {
-    padding-top: 48px;
+    padding-top: 44px;
     padding-bottom: 56px;
     padding-left: 40px;
     padding-right: 40px;
+
+    &:not(:first-child){
+      padding-bottom: 54px;
+    }
   }
 
   @media (min-width: $large-width) {
-    padding-top: 101px;
+    padding-top: 97px;
     padding-bottom: 106px;
     padding-left: 159px;
     padding-right: 163px;
+
+    &:not(:first-child){
+      padding-bottom: 105px;
+    }
   }
 }
 
@@ -36,12 +44,21 @@
   border-radius: $card-border-radius-small;
 
   @media (min-width: $medium-width) {
-    margin-bottom: 40px;
+    margin-bottom: 39px;
     border-radius: 30px;
+
+    &:not(:first-child){
+      margin-bottom: 51px;
+    }
   }
 
   @media (min-width: $large-width) {
+    margin-bottom: 44px;
     border-radius: 60px;
+
+    &:not(:first-child){
+      margin-bottom: 43px;
+    }
   }
 }
 
@@ -59,7 +76,6 @@
   display: flex;
   justify-content: space-between;
   @media (min-width: $medium-width) {
-    border-bottom: 1px solid #E1E3E9;
     padding-bottom: 38px;
   }
 
@@ -71,7 +87,7 @@
 .step-list__header-text{
   @media (min-width: $large-width) {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
   }
 }
 
@@ -81,24 +97,38 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    min-width: 185px;
+    min-width: 170px;
+    margin-right: 14px;
+    margin-top: 7px;
   }
 }
 
 .step-list__nav-item{
-  @include text(20px, normal, 24px, #000000);
+  position: relative;
+  @include text(20px, normal, 24px);
   letter-spacing: 0.11em;
   text-transform: uppercase;
+
+  &:not(:last-child){
+    margin-bottom: 20px;
+  }
+
   &::before {
-    content: "\2022";
-    color: $basic-blue-light;
+    position: absolute;
+    top: 8px;
+    left: -41px;
+    content: "";
+    background-color: $basic-blue-light;
+    border-radius: 50%;
     font-weight: bold;
     display: inline-block;
     width: 6px;
     height: 6px;
-    margin-left: -1em;
-    margin-right: 36px;
   }
+}
+
+.step-list__nav-link{
+  color: #000000;
 }
 
 .step-list__nav-item--disabled{
@@ -114,9 +144,17 @@
 
 
   @media (min-width: $medium-width) {
+    margin-top: 36px;
+    margin-left: 1px;
     font-size: 20px;
     line-height: 24px;
     min-height: 48px;
+  }
+
+  @media (min-width: $large-width) {
+    max-width: 581px;
+    margin-top: 35px;
+    margin-left: 0;
   }
 }
 
@@ -125,11 +163,14 @@
   z-index: 0;
 
   @media (min-width: $medium-width) {
-    margin-top: 42px;
+    padding-top: 42px;
+    margin-top: -4px;
+    border-top: 1px solid #E1E3E9;
   }
 
   @media (min-width: $large-width) {
-    margin-top: 62px;
+    padding-top: 63px;
+    margin-top: 0;
   }
 
   &:after {
@@ -141,16 +182,15 @@
       position: absolute;
       height: 400px;
       width: 1px;
-      top: -43px;
-      right: 164px;
+      top: 0;
+      right: 139px;
       background-image: linear-gradient(to bottom,#E1E3E9 85%, rgba(225,227,233,0));
     }
 
     @media (min-width: $large-width) {
       height: 600px;
       width: 1px;
-      top: -63px;
-      right: 330px;
+      right: 222px;
       background-image: linear-gradient(to bottom,#E1E3E9 80%, rgba(225,227,233,0));
     }
   }
@@ -171,10 +211,11 @@
   @media (min-width: $medium-width) {
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 0;
   }
 
   @media (min-width: $large-width) {
-    margin-top: 47px;
+    margin-top: 2px;
   }
 }
 
@@ -202,36 +243,43 @@
   letter-spacing: 0.09em;
 
   @media (min-width: $medium-width) {
-    margin-top: 27px;
+    margin-top: 21px;
   }
 
   @media (min-width: $large-width) {
     display: grid;
-    grid-template-columns: 285px 1fr 1fr;
+    grid-template-columns: 221px 1fr 1fr;
   }
 }
 
 .step-list__trip-data--companions{
   margin-top: 21px;
-  @media (min-width: $medium-width) {
-    order: 3;
-    padding-top: 26px;
-  }
 
   @media (min-width: $medium-width) {
+    order: 3;
+    margin-top: 0;
+    padding-top: 25px;
+  }
+
+  @media (min-width: $large-width) {
     padding-top: 30px;
   }
 }
 
 .step-list__trip-data--duration{
+  margin-top: 19px;
+
   @media (min-width: $medium-width) {
+    margin-top: 22px;
     order: 5;
     border-top: 1px solid #E1E3E9;
-    padding-top: 25px;
+    padding-top: 24px;
   }
 
 
   @media (min-width: $large-width) {
+    margin-top: 14px;
+    padding-top: 0;
     border-top: none;
   }
 }
@@ -254,6 +302,7 @@
   @media (min-width: $large-width) {
     justify-content: flex-start;
     min-width: 220px;
+    letter-spacing: 0.01em;
     order: 0;
   }
 }
@@ -267,6 +316,7 @@
   @media (min-width: $medium-width) {
     font-size: 20px;
     line-height: 18px;
+    margin-right: 5px;
     letter-spacing: 0.08em;
   }
 
@@ -297,7 +347,7 @@
   }
 
   @media (min-width: $large-width) {
-    min-width: 180px;
+    max-width: 180px;
     order: 1;
   }
 
@@ -327,7 +377,7 @@
 }
 
 .step-list__child{
-  margin-top: 20px;
+  margin-top: 22px;
 
   @media (min-width: $medium-width) {
     order: 4;
@@ -335,7 +385,7 @@
   }
 
   @media (min-width: $large-width) {
-    margin-top: -55px;
+    margin-top: 47px;
     margin-bottom: 0;
     margin-left: auto;
   }
@@ -373,9 +423,16 @@
   }
 }
 
+.step-list__name{
+  @media (min-width: $large-width) {
+    margin-left: 10px;
+    min-width: 300px;
+  }
+}
+
 .step-list__input{
   position: relative;
-  margin-top: 10px;
+  margin-top: 8px;
 
   @media (min-width: $medium-width) {
     margin-top: 24px;
@@ -406,11 +463,13 @@
   top: 15px;
 
   @media (min-width: $medium-width) {
-    top: 30px;
+    top: 29px;
+    right: 28px;
+    transform: scale(1.5);
   }
 
   @media (min-width: $large-width) {
-    right: 20px;
+    right: 27px;
   }
 }
 
@@ -426,7 +485,9 @@
   border-bottom: 1px solid #D6D9E6;
 
   @media (min-width: $medium-width) {
-    margin-top: 60px;
+    margin-top: 59px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   @media (min-width: $large-width) {
@@ -465,4 +526,12 @@
 .step-list__days{
   margin-top: 20px;
   width: 100%;
+
+  @media (min-width: $medium-width) {
+    margin-top: 36px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 1px;
+  }
 }
