--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -22,13 +22,15 @@
   border-top-right-radius: 30px;
 
   @media (min-width: $medium-width) {
-    padding-top: 57px;
-    padding-bottom: 76px;
+    padding-top: 53px;
+    padding-bottom: 93px;
   }
 
-  @media (min-width: $medium-width) {
-    padding-top: 54px;
-    padding-bottom: 64px;
+  @media (min-width: $large-width) {
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    padding-top: 51px;
+    padding-bottom: 73px;
   }
 }
 
@@ -62,12 +64,13 @@
 
   @media (min-width: $medium-width) {
     position: relative;
-    padding-bottom: 73px;
+    padding-top: 136px;
+    padding-bottom: 60px;
   }
 
   @media (min-width: $large-width) {
     position: relative;
-    padding-bottom: 90px;
+    padding-bottom: 65px;
   }
 }
 
@@ -80,13 +83,15 @@
   border-top-right-radius: 30px;
 
   @media (min-width: $medium-width) {
-    padding-top: 53px;
-    padding-bottom: 63px;
+    padding-top: 49px;
+    padding-bottom: 65px;
   }
 
   @media (min-width: $large-width) {
-    padding-top: 55px;
-    padding-bottom: 106px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    padding-top: 52px;
+    padding-bottom: 80px;
   }
 }
 
@@ -97,16 +102,16 @@
 
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 1;
-    width: 30%;
+    width: 25%;
   }
 
   @media (min-width: $large-width){
-    order: 1;
     position: absolute;
+    z-index: 13;
     top: 0;
     right: 0;
-    margin-top: -225px;
-    margin-right: 390px;
+    margin-top: -214px;
+    margin-right: 387px;
     width: auto;
   }
 }
@@ -115,20 +120,20 @@
   width: 45%;
 
   @media (min-width: $medium-width) {
-    text-align: left;
+    // text-align: left;
   }
 
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 3;
-    width: 30%;
+    width: 25%;
   }
 
   @media (min-width: $large-width){
-    order: 2;
     position: absolute;
+    z-index: 13;
     top: 0;
     right: 0;
-    margin-right: 180px;
+    margin-right: 155px;
     margin-top: -255px;
     width: auto;
   }
@@ -140,6 +145,7 @@
   @media (min-width: $medium-width){
     width: 94px;
     height: 94px;
+    margin-left: 16px;
   }
 
   @media (min-width: $large-width){
@@ -158,6 +164,8 @@
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 4;
     height: 60px;
+    margin-top: 45px;
+    width: 90%;
   }
 
   @media (min-width: $large-width){
@@ -179,11 +187,10 @@
 
   @media (min-width: $large-width) {
     display: block;
-    order: 3;
     position: absolute;
     top: 0;
     right: 0;
-    margin-right: 177px;
+    margin-right: 155px;
     margin-top: -65px;
     width: 190px;
     height: 47px;
@@ -199,13 +206,16 @@
 
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 5;
+    width: 86%;
+    height: 75px;
+    margin-top: 53px;
   }
 
   @media (min-width: $large-width){
-    order: 4;
-    width: 45%;
-    margin-top: 35px;
-    height: 105px;
+    width: 56%;
+    margin-top: 9px;
+    margin-left: -1px;
+    height: 75px;
   }
 
   &:hover{
@@ -231,16 +241,14 @@
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 2;
     margin-top: 0;
-    padding-bottom: 15px;
-    width: 30%;
+    padding-bottom: 32px;
+    width: 41%;
   }
 
   @media (min-width: $large-width){
-    order: 5;
-    width: 45%;
-    height: 105px;
-
-    margin-top: 35px;
+    width: 28%;
+    height: 75px;
+    margin-top: 9px;
   }
 }
 
@@ -264,7 +272,7 @@
 
 .user-info__legend--left{
   @media (min-width: $large-width) {
-    left: 10%;
+    left: 9%;
   }
 }
 
@@ -272,14 +280,29 @@
   border: none;
   background: none;
   padding-left: 8px;
+
+  @media (min-width: $medium-width) {
+    padding-top: 15px;
+    padding-left: 25px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-top: 16px;
+  }
 }
 
 .user-info__level-icon{
   display: block;
-  margin: 0 0 0 auto;
+  margin-left: 7px;
   --color-1: $dark-blue;
   --color-2: $special-grey;
   --color-3: #444444;
+
+  @media (min-width: $medium-width) {
+    transform: scale(0.95);
+    margin-left: 25px;
+    margin-top: -2px;
+  }
 
   @media (min-width: $large-width) {
     --color-1: #ffffff;
@@ -308,6 +331,10 @@
   list-style-type: none;
   display: flex;
   margin-right: 16px;
+
+  @media (min-width: $medium-width) {
+    margin-right: -2px;
+  }
 
   @media (min-width: $large-width) {
     display: none;
@@ -375,10 +402,11 @@
   margin-top: 2px;
 
   @media (min-width: $medium-width) {
-    margin-top: 15px;
+    margin-top: 19px;
   }
 
   @media (min-width: $large-width) {
-    margin-top: 26px;
+    margin-left: 5px;
+    margin-top: 17px;
   }
 }
