--- a/source/sass/blocks/companions-operations.scss
+++ b/source/sass/blocks/companions-operations.scss
@@ -4,7 +4,7 @@
   margin-top: 21px;
 
   @media (min-width: $medium-width) {
-    margin-top: 40px;
+    margin-top: 43px;
   }
 
   @media (min-width: $large-width) {
@@ -16,6 +16,12 @@
 .companions-operations__button{
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 8px;
+  }
+
   &:hover{
     background-color: transparent;
     opacity: 0.6;
@@ -27,6 +33,23 @@
   }
 }
 
+.companions-operations__button-caption{
+  margin-right: 5px;
+  font-size: 17px;
+  line-height: 30px;
+
+  @media (min-width: $medium-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
 .companions-operations__icon{
-  padding-right: 15px;
+  margin-top: -1px;
+  margin-right: 15px;
+
+  @media (min-width: $medium-width) {
+    transform: scale(1.3);
+    margin-right: 28px;
+  }
 }
