--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -174,6 +174,10 @@
   @media (max-width: $medium-max-width) {
     color: $basic-blue;
   }
+
+  @media (min-width: $large-width) {
+    margin-top: 220px;
+  }
 }
 
 .page-header__buttons{
@@ -226,11 +230,11 @@
   fill: #FF8D30;
   bottom: -4px;
   left: 25px;
-  width: 190px;
+  width: 172px;
 
   @media (min-width: $medium-width) {
     left: 74px;
-    width: 320px;
+    width: 290px;
   }
 
   @media (min-width: $large-width) {
@@ -264,8 +268,14 @@
 }
 
 .page-header__return-to-main{
+  @media (max-width: $small-max-width) {
+    display: none;
+  }
+
   display: flex;
   align-items: center;
+  margin-top: 5px;
+  margin-right: 35px;
 }
 
 .page-header__icons{
