--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -57,6 +57,11 @@
     font-size: 30px;
     line-height: 30px;
   }
+
+  @media (min-width: $large-width) {
+    margin-left: 22px;
+    margin-top: 10px;
+  }
 }
 
 .choose-companion__list{
@@ -71,11 +76,9 @@
     border-top: 1px solid #F3C72B;
     border-bottom: 1px solid #F3C72B;
   }
-}
 
-.choose-companion__br{
-  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
-    display: none;
+  @media (min-width: $large-width) {
+    margin-top: 29px;
   }
 }
 
@@ -90,7 +93,7 @@
   }
 
   @media (min-width: $large-width) {
-    margin-top: 23px;
+    margin-top: 21px;
   }
 }
 
@@ -123,6 +126,11 @@
     grid-template-columns: 1fr 1fr 1fr;
     margin-left: 24px;
   }
+
+  @media (min-width: $large-width) {
+    margin-left: 24px;
+    margin-top: 6px;
+  }
 }
 
 .choose-companion__transport {
@@ -133,6 +141,12 @@
   @media (min-width: $medium-width) and (max-width: $medium-max-width) {
     &:not(:last-child){
       margin-right: 3px;
+    }
+  }
+
+  @media (min-width: $large-width) {
+    &:not(:last-child){
+      margin-right: 1px;
     }
   }
 }
@@ -162,6 +176,14 @@
     min-width: 148px;
     height: 22px;
     order: 2;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 23px;
+    margin-bottom: 36px;
+    margin-left: 22px;
+    max-width: 192px;
+    height: 24px;
   }
 }
 
@@ -199,12 +221,16 @@
   }
 
   @media (min-width: $large-width){
-    left: 59px;
+    left: 82px;
   }
 }
 
 .choose-companion__range-right-dot{
   right: 0;
+
+  @media (min-width: $large-width) {
+    right: 20px;
+  }
 }
 
 .choose-companion__range-line{
@@ -220,7 +246,9 @@
   }
 
   @media (min-width: $large-width) {
-    background: linear-gradient(to right, rgba(29,46,91, 0.2) 25%, $basic-blue-light 25%);
+    width: 83%;
+    margin-left: 20px;
+    background: linear-gradient(to right, rgba(29,46,91, 0.2) 33%, $basic-blue-light 25%);
   }
 }
 
@@ -238,6 +266,10 @@
   @media (min-width: $medium-width) and (max-width: $medium-max-width) {
     margin-left: 26px;
   }
+
+  @media (min-width: $large-width) {
+    margin-left: 40px;
+  }
 }
 
 .choose-companion__show{
@@ -254,7 +286,10 @@
   }
 
   @media (min-width: $large-width) {
+    margin-top: 27px;
     margin-bottom: 20px;
+    margin-left: 24px;
+    width: 81%;
   }
 }
 
@@ -267,6 +302,11 @@
     font-size: 20px;
     line-height: 20px;
     margin-top: 3px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-left: 15px;
+    margin-top: 0;
   }
 }
 
@@ -292,6 +332,11 @@
   margin-right: -7px;
   @media (min-width: $medium-width) and (max-width: $medium-max-width) {
     display: none;
+  }
+
+  @media (min-width: $large-width) {
+    margin-right: 16px;
+    margin-top: -12px;
   }
 }
 
@@ -326,6 +371,7 @@
 
   @media (min-width: $large-width) {
     padding-top: 19px;
+    padding-bottom: 16px;
   }
 }
 
@@ -354,6 +400,10 @@
     }
   }
 
+  @media (min-width: $large-width) {
+    margin-left: 22px;
+  }
+
   &:hover{
     opacity: 0.6;
   }
@@ -378,6 +428,11 @@
     margin-top: -4px;
     margin-left: 14px;
   }
+
+  @media (min-width: $large-width) {
+    margin-top: 21px;
+    margin-left: 23px;
+  }
 }
 
 .choose-companion__range-icon{
@@ -388,6 +443,11 @@
   @media (min-width: $medium-width) {
     margin-left: 25px;
     margin-right: -7px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-left: 34px;
+    margin-right: -12px;
   }
 }
 
