--- a/source/sass/blocks/flags-list.scss
+++ b/source/sass/blocks/flags-list.scss
@@ -39,4 +39,8 @@
   @media (min-width: $medium-width) {
     margin-right: 12px;
   }
+
+  @media (min-width: $large-width) {
+    margin-right: 18px;
+  }
 }
