--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -291,6 +291,10 @@
     margin-left: 24px;
     width: 81%;
   }
+
+  &:hover{
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.14));
+  }
 }
 
 .choose-companion__show-caption{
