--- a/source/sass/blocks/country-description-list.scss
+++ b/source/sass/blocks/country-description-list.scss
@@ -55,8 +55,12 @@
 
     &:after {
       position: absolute;
-      right: 75px;
+      right: 95px;
       height: 40px;
+      background: linear-gradient(to left,
+      rgba(255,255,255, 1) 5%,
+      rgba(255,255,255, 0) 20%
+   );
     }
   }
 
