--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -97,16 +97,17 @@
 }
 
 .feedback__registration{
-  position: relative;
   text-align: center;
   margin-top: 30px;
 
   @media (min-width: $medium-width) {
-    margin-top: 65px;
+    margin-top: 68px;
+    margin-right: 72px;
   }
 
   @media (min-width: $large-width) {
-    margin-top: 57px;
+    margin-top: 61px;
+    margin-right: 146px;
   }
 }
 
@@ -130,11 +131,13 @@
 
 .feedback__email{
   height: 59px;
-  margin-left: -3px;
-  width: 75%;
-  padding-top: 0;
-  padding-right: 63px;
-  border-radius: 10px;
+  width: 100%;
+  border: none;
+  outline: none;
+  -webkit-appearance: none;
+  vertical-align: middle;
+  background: none;
+
   @include text(18px, bold, 18px, $special-grey);
 
   &::placeholder{
@@ -143,8 +146,6 @@
 
   @media (min-width: $medium-width) {
     height: 80px;
-    width: 80%;
-    border-radius: 25px;
 
     &::placeholder{
       font-size: 24px;
@@ -177,19 +178,12 @@
 }
 
 .feedback__send-email{
-  position: absolute;
-  top: 2px;
-  right: 0;
   border-radius: 10px;
-  margin-left: -65px;
-  width: 60px;
+  width: 75px;
   height: 62px;
 
   @media (min-width: $medium-width) {
-    top: 3px;
-    right: 35px;
-    margin-left: -84px;
-    width: 80px;
+    width: 94px;
     height: 80px;
     border-radius: 4px;
     border-top-right-radius: 25px;
@@ -197,11 +191,8 @@
   }
 
   @media (min-width: $large-width) {
-    top: 2px;
-    right: 73px;
     margin-left: -84px;
-    width: 325px;
-    height: 83px;
+    width: 341px;
   }
 }
 
@@ -211,12 +202,6 @@
   @media (min-width: $medium-width) {
     font-size: 28px;
     line-height: 28px;
-  }
-}
-
-.feedback__any-questions-br{
-  @media (min-width: $medium-width) {
-    display: none;
   }
 }
 
@@ -246,11 +231,35 @@
   margin-top: -1px;
 }
 
+.feedback__button{
+  display: flex;
+  width: 100%;
+  height: 62px;
+  background-color: #ffffff;
+  border-radius: 10px;
+
+  @media (min-width: $medium-width) {
+    height: 80px;
+    margin-left: 37px;
+    border-radius: 25px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-left: 73px;
+  }
+}
+
 .feedback__button-text{
   display: none;
 
   @media (min-width: $large-width) {
     display: block;
-    margin-right: 22px;
+    margin-right: 32px;
+  }
+}
+
+.feedback__any-questions-br{
+  @media (min-width: $medium-width) {
+    display: none;
   }
 }
