--- a/source/sass/blocks/add-plans.scss
+++ b/source/sass/blocks/add-plans.scss
@@ -72,7 +72,11 @@
   @media (min-width: $medium-width) {
     justify-content: flex-end;
     margin-left: -36px;
-    margin-top: 84px;
+    margin-top: 77px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 85px;
   }
 }
 
@@ -481,14 +485,14 @@
   @media (min-width: $medium-width) {
     border: none;
     border-left: 1px solid $special-dark-grey;
-    margin-right: 50px;
+    margin-right: 10px;
     padding-top: 30px;
     padding-left: 25px;
   }
 
   @media (min-width: $large-width) {
     padding-left: 25px;
-    margin-right: 79px;
+    margin-right: 38px;
   }
 }
 
@@ -498,8 +502,9 @@
   }
 
   @media (min-width: $medium-width) {
+    min-width: 170px;
     &:not(:last-child){
-      margin-bottom: 5px;
+      margin-bottom: 6px;
     }
   }
 }
